--- a/FROM_CVS/trunk/MDsimul/Makefile
+++ b/FROM_CVS/trunk/MDsimul/Makefile
@@ -10,10 +10,10 @@ export CC=$(GCC)
 export MPIDIR =/usr/include/lam
 ATHLON_CFLAGS  = -Wall -O3   -mcpu=athlon-xp -march=athlon-xp -funroll-all-loops -malign-double #-ffast-math 
 X86_CFLAGS  =-O3 -msse2 -mfpmath=sse -march=nocona -mtune=nocona -funroll-all-loops -ffast-math 
-MAC_CFLAGS  =  -Wall -DMD_MAC -O3 -march=nocona -mtune=nocona  -ffast-math -msse2 -mfpmath=sse #-fast #-xN #-tpp7# -ipo 
+MAC_CFLAGS  =  -Wall -DMD_MAC -O3 # queste rallentano sui nuovi macbook: -march=nocona -mtune=nocona  -ffast-math -msse2 -mfpmath=sse #-fast #-xN #-tpp7# -ipo 
 BEOWULF_CFLAGS=  -B -tp p6 -fast
 I386_CFLAGS= -Wall -O3 -mcpu=i686 -march=i686
-SP4_CFLAGS  = -qarch=pwr4 -qtune=pwr4  -O3 -bmaxdata:0x70000000 -qcpluscmt #-I$(TURBOMP)/POWER4/include#per SP4
+SP4_CFLAGS  = -qarch=pwr4 -qtune=pwr4 -O3 -bmaxdata:0x70000000 -qcpluscmt #-I$(TURBOMP)/POWER4/include#per SP4
 OPTERON_FLAGS= -Wall -O3 -mcpu=opteron -march=opteron -funroll-all-loops -mfpmath=sse -msse2
 DEBUG_CFLAGS= -g -Wall 
 #Scegli un *_CFLAGS in base all'architettura 
@@ -51,7 +51,7 @@ SFMC_ELCONST_MACROS=-UMC_RIMDISK_NORMSQ -DMC_DISABLE_BB -DHC_ALGO_OPT -UMC_ELCON
 #
 SFMC_MCELCONST_MACROS=-UMC_ELCONST_STRAIGHT -DMC_ELCONST_MC -UELCONST_NEWALGO -DALIGN_POT -UMC_BOND_POS -DMC_NVE -UMC_FREEZE_BONDS -DMC_CLUSTER_MOVE -DMC_CLUSTER_NPT -UMC_ALT_ROT -DMC_FLIP_MOVE -UMC_OPT_BUILDATOMPOS -DMCIN_OPT -DMC_HC -DMC_SUS -UMC_CALC_COVADD -DMD_NO_SYSTEM -DMC_GRANDCAN  -DMC_SIMUL -UMD_STANDALONE -DMD_LXYZ -UMD_CHAIN_SIM -UMD_CALC_VBONDING -UDMD_MULTIPLE_LL -DMD_DYNAMIC_OPROG -UMD_CALENDAR_HYBRID -DMD_SCALEPHI_STAGES -DMD_OPT_SCALEPHI -UMD_ALLOW_ONE_IGG_BOND -UMD_PROTEIN_DESIGN -UMD_PARANOID_CHECKS -DMD_GRAZING_TRYHARDER -DMD_GHOST_IGG -DMD_RABBIT -DMD_SAVE_SPOTS -DMD_SUPERELLIPSOID -UMD_ABSORPTION -UMD_FOUR_BEADS -DMD_BASIC_DT -UMD_EDHEFLEX_WALL -UMD_INELASTIC -UMD_POLYDISP -UMD_CALC_DPP -UMD_HE_PARALL -DMD_BIG_DT -DMD_ASYM_ITENS -DEDHE_FLEX -DMD_PATCHY_HE -UMD_GLOBALNR -DMD_GLOBALNRD -DMD_GLOBALNRNL -DMD_GLOBALNRDNL -UMD_USE_CBLAS -UMD_USE_LAPACK -DMD_STOREMGL -UMD_HSVISCO -DMD_LOADMESH -DXDISP -UATPTENS -DMOLPTENS -UATPRESS #-DMPI 
 #
-SFMC_MACROS=-DMC_RIMDISK_NORMSQ -DHC_ALGO_OPT -UMC_ELCONST_STRAIGHT -DMC_BOUNDING_SPHERES -UMC_ELASTIC_CONSTANTS -UELCONST_NEWALGO -DALIGN_POT -DMC_BOND_POS -DMC_NVE -UMC_FREEZE_BONDS -UMC_CLUSTER_MOVE -UMC_CLUSTER_NPT -UMC_ALT_ROT -DMC_FLIP_MOVE -UMC_OPT_BUILDATOMPOS -DMCIN_OPT -DMC_HC -DMC_SUS -UMC_CALC_COVADD -DMD_NO_SYSTEM -DMC_GRANDCAN  -DMC_SIMUL -UMD_STANDALONE -DMD_LXYZ -UMD_CHAIN_SIM -UMD_CALC_VBONDING -UDMD_MULTIPLE_LL -DMD_DYNAMIC_OPROG -UMD_CALENDAR_HYBRID -DMD_SCALEPHI_STAGES -DMD_OPT_SCALEPHI -UMD_ALLOW_ONE_IGG_BOND -UMD_PROTEIN_DESIGN -UMD_PARANOID_CHECKS -DMD_GRAZING_TRYHARDER -DMD_GHOST_IGG -DMD_RABBIT -DMD_SAVE_SPOTS -DMD_SUPERELLIPSOID -UMD_ABSORPTION -UMD_FOUR_BEADS -DMD_BASIC_DT -UMD_EDHEFLEX_WALL -UMD_INELASTIC -UMD_POLYDISP -UMD_CALC_DPP -UMD_HE_PARALL -DMD_BIG_DT -DMD_ASYM_ITENS -DEDHE_FLEX -DMD_PATCHY_HE -UMD_GLOBALNR -DMD_GLOBALNRD -DMD_GLOBALNRNL -DMD_GLOBALNRDNL -UMD_USE_CBLAS -UMD_USE_LAPACK -DMD_STOREMGL -UMD_HSVISCO -DMD_LOADMESH -DXDISP -UATPTENS -DMOLPTENS -UATPRESS #-DMPI 
+SFMC_MACROS=-UMC_IBARRA_SIMPLER -DHC_ALGO_OPT -UMC_ELCONST_STRAIGHT -DMC_BOUNDING_SPHERES -UMC_ELASTIC_CONSTANTS -UELCONST_NEWALGO -DALIGN_POT -DMC_BOND_POS -DMC_NVE -UMC_FREEZE_BONDS -UMC_CLUSTER_MOVE -UMC_CLUSTER_NPT -UMC_ALT_ROT -DMC_FLIP_MOVE -UMC_OPT_BUILDATOMPOS -DMCIN_OPT -DMC_HC -DMC_SUS -UMC_CALC_COVADD -DMD_NO_SYSTEM -DMC_GRANDCAN  -DMC_SIMUL -UMD_STANDALONE -DMD_LXYZ -UMD_CHAIN_SIM -UMD_CALC_VBONDING -UDMD_MULTIPLE_LL -DMD_DYNAMIC_OPROG -UMD_CALENDAR_HYBRID -DMD_SCALEPHI_STAGES -DMD_OPT_SCALEPHI -UMD_ALLOW_ONE_IGG_BOND -UMD_PROTEIN_DESIGN -UMD_PARANOID_CHECKS -DMD_GRAZING_TRYHARDER -DMD_GHOST_IGG -DMD_RABBIT -DMD_SAVE_SPOTS -DMD_SUPERELLIPSOID -UMD_ABSORPTION -UMD_FOUR_BEADS -DMD_BASIC_DT -UMD_EDHEFLEX_WALL -UMD_INELASTIC -UMD_POLYDISP -UMD_CALC_DPP -UMD_HE_PARALL -DMD_BIG_DT -DMD_ASYM_ITENS -DEDHE_FLEX -DMD_PATCHY_HE -UMD_GLOBALNR -DMD_GLOBALNRD -DMD_GLOBALNRNL -DMD_GLOBALNRDNL -UMD_USE_CBLAS -UMD_USE_LAPACK -DMD_STOREMGL -UMD_HSVISCO -DMD_LOADMESH -DXDISP -UATPTENS -DMOLPTENS -UATPRESS #-DMPI 
 #============= >>> TWO PATCHES <<< ====================
 TWOPATCHES_MACROS=-DMC_NVE -UMC_FREEZE_BONDS -DMC_CLUSTER_MOVE -DMC_CLUSTER_NPT -UMC_ALT_ROT -DMC_FLIP_MOVE -UMC_OPT_BUILDATOMPOS -DMCIN_OPT -UMC_HC -DMC_SUS -DMC_CALC_COVADD -DMD_NO_SYSTEM -DMC_GRANDCAN  -DMC_SIMUL -UMD_STANDALONE -DMD_LXYZ -UMD_CHAIN_SIM -UMD_CALC_VBONDING -UDMD_MULTIPLE_LL -DMD_DYNAMIC_OPROG -UMD_CALENDAR_HYBRID -DMD_SCALEPHI_STAGES -DMD_OPT_SCALEPHI -UMD_ALLOW_ONE_IGG_BOND -UMD_PROTEIN_DESIGN -UMD_PARANOID_CHECKS -DMD_GRAZING_TRYHARDER -DMD_GHOST_IGG -DMD_RABBIT -DMD_SAVE_SPOTS -DMD_SUPERELLIPSOID -UMD_ABSORPTION -UMD_FOUR_BEADS -DMD_BASIC_DT -UMD_EDHEFLEX_WALL -UMD_INELASTIC -UMD_POLYDISP -UMD_CALC_DPP -UMD_HE_PARALL -DMD_BIG_DT -DMD_ASYM_ITENS -DEDHE_FLEX -DMD_PATCHY_HE -UMD_GLOBALNR -DMD_GLOBALNRD -DMD_GLOBALNRNL -DMD_GLOBALNRDNL -UMD_USE_CBLAS -UMD_USE_LAPACK -DMD_STOREMGL -UMD_HSVISCO -DMD_LOADMESH -DXDISP -UATPTENS -DMOLPTENS -UATPRESS #-DMPI 
 #=========== >>> SOFT HARD CYLINDERS MONTE CARLO MACROS <<< =============
@@ -106,7 +106,7 @@ SURFANTIG_MACROS=-DMD_SUBENZYME -DMD_MULTIPLE_LL -DMD_NO_SYSTEM -DMD_DYNAMIC_OPR
 export MACROS=$(SFMC_MACROS)#-DMD_MICRO_LANG#$(ELLIPSOIDS_MACROS)# -DMD_SQWELL -DMD_MICRO_LANG -DMD_HSVISCO#-DMD_FULL_LANG
 #export MACROS= -DMD_LOADMESH -DSOFT_SPHERE -DMD_STATIC_PP18 -DXDISP  -DATPTENS -UMOLPTENS -UATPRESS -DORIGIN -DMPI #-DPRINTER_PROC -DTAPPING -DMD_LOADMESH #per SP4
 # ===========================================
-export LDFLAGS= #-g #-L/usr/lib/sse2 -latlas -lcblas -llapack_atlas -lf77blas #-L /usr/lib/lam/lib -llamf77mpi -lmpi -llam -lnsl -lutil -lpmpi -llammpio
+export LDFLAGS=-lgsl -llapack -lblas# -framework Accelerate #-lgsl #-llapack #-g #-L/usr/lib/sse2 -latlas -lcblas -llapack_atlas -lf77blas #-L /usr/lib/lam/lib -llamf77mpi -lmpi -llam -lnsl -lutil -lpmpi -llammpio
 #export LDFLAGS= #-L$(TURBOMP)/POWER4/lib -lxlf90#per SP4
 # ============================================
 # NOTE:
