--- a/FROM_CVS/trunk/MDsimul/Makefile
+++ b/FROM_CVS/trunk/MDsimul/Makefile
@@ -113,7 +113,7 @@ SURFANTIG_MACROS=-DMD_SUBENZYME -DMD_MULTIPLE_LL -DMD_NO_SYSTEM -DMD_DYNAMIC_OPR
 #### SCEGLI TRA I VARI *_MACROS
 #export MACROS=$(SFMC_ELCONST_MACROS)#-DMD_MICRO_LANG#$(ELLIPSOIDS_MACROS)# -DMD_SQWELL -DMD_MICRO_LANG -DMD_HSVISCO#-DMD_FULL_LANG
 #export MACROS=$(HELIX_MACROS)#-DMD_MICRO_LANG#$(ELLIPSOIDS_MACROS)# -DMD_SQWELL -DMD_MICRO_LANG -DMD_HSVISCO#-DMD_FULL_LANG
-export MACROS=$(HARDELL_MACROS)#-DMD_MICRO_LANG#$(ELLIPSOIDS_MACROS)# -DMD_SQWELL -DMD_MICRO_LANG -DMD_HSVISCO#-DMD_FULL_LANG
+export MACROS=$(SFMC_MACROS)#-DMD_MICRO_LANG#$(ELLIPSOIDS_MACROS)# -DMD_SQWELL -DMD_MICRO_LANG -DMD_HSVISCO#-DMD_FULL_LANG
 #export MACROS=$(NEW_DGEBA_MACROS)#-DMD_MICRO_LANG#$(ELLIPSOIDS_MACROS)# -DMD_SQWELL -DMD_MICRO_LANG -DMD_HSVISCO#-DMD_FULL_LANG
 #export MACROS= -DMD_LOADMESH -DSOFT_SPHERE -DMD_STATIC_PP18 -DXDISP  -DATPTENS -UMOLPTENS -UATPRESS -DORIGIN -DMPI #-DPRINTER_PROC -DTAPPING -DMD_LOADMESH #per SP4
 # ===========================================
